[package]
name = "raydium-alerts"
version = "0.2.1"
edition = { workspace = true }

[dependencies]
carbon-core = { workspace = true }
carbon-raydium-clmm-decoder = { workspace = true }
carbon-raydium-amm-v4-decoder = { workspace = true }
carbon-raydium-cpmm-decoder = { workspace = true }
carbon-pumpfun-decoder = { workspace = true }
carbon-token-program-decoder = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

async-trait = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
yellowstone-grpc-proto = { workspace = true }
chrono = "0.4"
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
rabbitmq-stream-client = "0.8.0"
once_cell = "1.21.1"
tungstenite = "0.26.2"
